# latent-linear-adjustment-autoencoders

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
python/: run-experiments.sh  settings.py
python/climate_ae/data_generator/: datahandler.py  prec_psl.py  prec_psl_shorter_training_period.py  prec_psl_shorter_training_period_detrend_precip.py  temp_psl.py  utils.py
python/climate_ae/experiments_utils/: experiment_repo.py
python/climate_ae/models/: utils.py
python/climate_ae/models/ae/: climate_utils.py  eval_utils.py  main_ae.py  main_generator.py  main_linear.py  module.py  penalties.py  train.py  train_linear_model.py  train_linear_model_generator.py
python/climate_ae/models/ae/configs/: config_dyn_adj_precip.json  config_dyn_adj_temp.json
python/preprocessing/: preprocess_rda2tfrecords.py
