[tool.poetry]
name = "LLAAE"
version = "0.1.0"
description = ""
authors = ["Christina Heinze-Deml <heinzec@gpustat.math.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
matplotlib = "^3.3.4"
netCDF4 = "^1.5.6"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"
statsmodels = "^0.12.2"
rpy2 = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
